index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1553,8 +1553,8 @@ const auth = firebase.auth();
 const db = firebase.firestore();
 let currentExercises = [];
 /* 요소 참조 */
-const tabBtns = document.querySelectorAll('.tabBtn');
-const tabContents = document.querySelectorAll('.tabContent');
+// const tabBtns = document.querySelectorAll('.tabBtn');
+// const tabContents = document.querySelectorAll('.tabContent');
 
 const weightSelect = document.getElementById('weight');
 const repsSelect = document.getElementById('reps');
