--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>1RM</title>
- 
+
 <style>
 /* ===============================
    🔥 전체 레이아웃 (폰 비율 고정)
@@ -1300,14 +1300,7 @@ input[type="number"] {
   <button class="part-btn" data-part="leg">leg</button>
   <button class="part-btn" data-part="arm">arm</button>
 </div>
-<!-- 목표 섹션 -->
-<div id="goalsSection" style="margin-top:12px;">
-  <div style="display:flex;align-items:center;justify-content:space-between;margin:8px 0;">
-    <div style="font-size:15px;font-weight:700;color:#eee;">목표</div>
-    <button id="addGoalBtn" class="add-btn" style="width:32px;height:32px;">+</button>
-  </div>
-  <div id="goalsList"></div>
-</div>
+
 <div id="exercise-screen" style="display:none;">
   <div id="exercise-header" style="margin-bottom:10px; cursor:pointer;">
     ← <span id="current-part-name"></span>
@@ -1345,30 +1338,6 @@ input[type="number"] {
   <!-- 가로 기록 영역 -->
   <div id="acc-records" class="record-horizontal"></div>
 
-</div>
-
-
-<!-- 목표 추가 팝업 -->
-<div id="goalModal" class="modal hidden">
-  <div class="modal-box">
-    <div class="modal-title">목표 추가</div>
-
-    <div style="padding: 10px 16px 16px;">
-      <input id="goalName" placeholder="목표명 (예: 턱걸이)" style="width:100%;padding:12px;border-radius:10px;border:1px solid #333;background:#111;color:#eee;box-sizing:border-box;margin-bottom:10px;">
-      <div style="display:flex;gap:8px;">
-        <input id="goalWeight" type="number" placeholder="목표 무게(선택)" style="flex:1;padding:12px;border-radius:10px;border:1px solid #333;background:#111;color:#eee;box-sizing:border-box;">
-        <input id="goalReps" type="number" placeholder="목표 횟수(선택)" style="flex:1;padding:12px;border-radius:10px;border:1px solid #333;background:#111;color:#eee;box-sizing:border-box;">
-      </div>
-      <div style="margin-top:8px;font-size:12px;color:#777;">
-        * 무게 없으면 횟수 목표로 저장됨
-      </div>
-    </div>
-
-    <div class="modal-actions">
-      <button id="goalCancel" class="modal-btn">취소</button>
-      <button id="goalSave" class="modal-btn danger">저장</button>
-    </div>
-  </div>
 </div>
 </div>
 
@@ -1553,8 +1522,8 @@ const auth = firebase.auth();
 const db = firebase.firestore();
 let currentExercises = [];
 /* 요소 참조 */
-// const tabBtns = document.querySelectorAll('.tabBtn');
-// const tabContents = document.querySelectorAll('.tabContent');
+const tabBtns = document.querySelectorAll('.tabBtn');
+const tabContents = document.querySelectorAll('.tabContent');
 
 const weightSelect = document.getElementById('weight');
 const repsSelect = document.getElementById('reps');
@@ -1658,15 +1627,8 @@ const LS_KEYS = {
   records: "mf_records_v1",              // bench/squat/dead
   calendar: "mf_calendar_v1",            // calData
   accessoriesList: (part) => `mf_acc_list_${part}_v1`,   // part별 종목 리스트
-  accessoryRecords: "mf_acc_records_v1",  // 보조운동 기록 전체
-  goals: "mf_goals_v1"
+  accessoryRecords: "mf_acc_records_v1"  // 보조운동 기록 전체
 };
-const partScreen = document.getElementById('acc-part-screen');
-const exerciseScreen = document.getElementById('exercise-screen');
-const partTitle = document.getElementById('current-part-name');
-const partBtns = document.querySelectorAll('.part-btn');
-const goalsSection = document.getElementById("goalsSection");
-
 
 function lsGet(key, fallback){
   try{
@@ -1708,9 +1670,6 @@ function loadAllFromLocal(){
   // 보조운동 기록
   accRecordsByExercise = lsGet(LS_KEYS.accessoryRecords, {});
   if(!accRecordsByExercise || typeof accRecordsByExercise !== "object") accRecordsByExercise = {};
-  // ✅ 목표 로드 + 자동 반영
-  loadGoalsFromLocal();
-  syncGoalsFromAccessoryRecords();
 }
 
 /* ✅ 로컬로 전체 저장 */
@@ -1781,8 +1740,7 @@ partButtons.forEach(btn => {
     currentPartNameEl.textContent = currentPart;
     partScreen.style.display = 'none';
     exerciseScreen.style.display = 'block';
-   
-if (goalsSection) goalsSection.style.display = "none";
+
     // Firestore에서 해당 종목 불러오기
     await loadExercises(currentPart);
   });
@@ -1806,7 +1764,6 @@ function openExerciseDetail(name) {
   exerciseScreen.style.display = 'none';
   detailScreen.style.display = 'block';
   document.getElementById('detail-exercise-name').textContent = name;
-if (goalsSection) goalsSection.style.display = "none";
 
   renderAccessoryRecords(name); // ✅ "디테일 화면"에는 이걸 쓰자
 }
@@ -2655,6 +2612,10 @@ async function deleteRecord(id){
 
 
 
+const partScreen = document.getElementById('acc-part-screen');
+const exerciseScreen = document.getElementById('exercise-screen');
+const partTitle = document.getElementById('current-part-name');
+const partBtns = document.querySelectorAll('.part-btn');
 
 
 
@@ -2662,7 +2623,6 @@ async function deleteRecord(id){
 document.getElementById('exercise-header').addEventListener('click', () => {
   exerciseScreen.style.display = 'none';
   partScreen.style.display = 'block';
-if (goalsSection) goalsSection.style.display = "block";
 });
 const threeToggleBtn = document.getElementById("threeToggleBtn");
 const threeDetail = document.getElementById("threeDetail");
@@ -2719,16 +2679,13 @@ bottomTabBtns.forEach(btn => {
     document.querySelector('.app').scrollTo({ top: 0, behavior: 'auto' });
 
     // Tip 탭 초기화
-  if (target === 'tab4') {
-  partScreen.style.display = 'block';
-  exerciseScreen.style.display = 'none';
-  detailScreen.style.display = 'none';
-
-  // ❌ 여기서 goals 건드리지 마라
-} else {
-  detailScreen.style.display = 'none';
-  if (goalsSection) goalsSection.style.display = "none";
-}
+    if (target === 'tab4') {
+      partScreen.style.display = 'block';
+      exerciseScreen.style.display = 'none';
+      detailScreen.style.display = 'none';
+    } else {
+      detailScreen.style.display = 'none';
+    }
   });
 });
 
@@ -2739,7 +2696,31 @@ bottomTabBtns.forEach(btn => {
 
 
 
+tabBtns.forEach(btn => {
+  btn.addEventListener('click', () => {
+    calPopup.classList.add("hidden");
 
+    tabBtns.forEach(b => b.classList.remove('active'));
+    btn.classList.add('active');
+
+    const target = btn.dataset.target;
+    tabContents.forEach(tc => {
+      const on = (tc.id === target);
+      tc.classList.toggle('active', on);
+      tc.style.display = on ? 'block' : 'none';
+    });
+document.querySelector('.app').scrollTo({ top: 0, behavior: 'auto' });
+
+    // Tip 탭 초기화
+    if (target === 'tab4') {
+      partScreen.style.display = 'block';
+      exerciseScreen.style.display = 'none';
+      detailScreen.style.display = 'none'; // ✅ 추가: 디테일도 닫기
+    } else {
+      detailScreen.style.display = 'none';
+    }
+  });
+});
 
 
 
@@ -3015,7 +2996,6 @@ async function addAccessorySet() {
   // 화면 갱신
   document.getElementById("acc-weight").value = "";
   document.getElementById("acc-reps").value = "";
-syncGoalsFromAccessoryRecords(); // ✅ 목표 자동 반영
   renderAccessoryRecords(currentExerciseName);
   renderExercises();
 }
@@ -3057,65 +3037,6 @@ document.addEventListener("touchend", () => {
 document.addEventListener("touchmove", () => {
   clearTimeout(accDeleteTimer);
 });
-
-function syncGoalsFromAccessoryRecords(){
-  // 목표명(name)과 exerciseName이 같으면 자동 반영한다고 가정
-  // accRecordsByExercise 구조: { "턱걸이": [ {reps, weight, createdAt...}, ... ] }
-
-  goals.forEach(g=>{
-    const list = accRecordsByExercise[g.name] || [];
-    if(!list.length) return;
-
-    // 최신/최고 기준은 정책 정하면 됨.
-    // 1) reps 목표: 최대 reps
-    if(g.mode === "reps"){
-      let maxR = 0;
-      list.forEach(x => { maxR = Math.max(maxR, Number(x.reps||0)); });
-      g.currentReps = maxR;
-    }
-
-    // 2) weight 목표: 최대 weight
-    if(g.mode === "weight"){
-      let maxW = 0;
-      list.forEach(x => { maxW = Math.max(maxW, Number(x.weight||0)); });
-      g.currentWeight = maxW;
-    }
-
-    // 3) weight_reps 목표:
-    //    목표 weight에 가장 가까운 weight에서 reps 최대(혹은 동일 weight에서 reps 최대)
-    if(g.mode === "weight_reps"){
-      const targetW = Number(g.targetWeight||0);
-      // 목표 무게와 같은 weight 기록에서 reps 최대를 우선
-      let best = null;
-
-      list.forEach(x=>{
-        const w = Number(x.weight||0);
-        const r = Number(x.reps||0);
-        if(!w || !r) return;
-
-        if(best === null) best = {w,r};
-        // 1순위: weight가 목표와 같으면 reps 큰 게 승
-        if(w === targetW){
-          if(best.w !== targetW || r > best.r) best = {w,r};
-          return;
-        }
-        // 2순위: 목표보다 낮은 weight 중 가장 높은 weight, 그 안에서 reps 최대
-        if(w < targetW){
-          if(best.w > targetW) return; // (혹시) 목표보다 큰 게 best면 건드리지 않음
-          if(w > best.w || (w === best.w && r > best.r)) best = {w,r};
-        }
-      });
-
-      if(best){
-        g.currentWeight = best.w;
-        g.currentReps = best.r;
-      }
-    }
-  });
-
-  saveGoalsToLocal();
-  renderGoals();
-}
 
 async function deleteAccessoryRecord(recordId) {
   if (!recordId) return;
@@ -3289,142 +3210,7 @@ updateYearProgress();
 // “실시간 수치 반영” 느낌: 1분마다 갱신(배터리도 괜찮음)
 setInterval(updateYearProgress, 60 * 1000);
 
-   let goals = [];
-
-function loadGoalsFromLocal(){
-  goals = lsGet(LS_KEYS.goals, []);
-  if(!Array.isArray(goals)) goals = [];
-}
-function saveGoalsToLocal(){
-  lsSet(LS_KEYS.goals, goals || []);
-}
-
-function calcGoalProgress(g){
-  // mode별 퍼센트
-  if(g.mode === "reps"){
-    const cur = Number(g.currentReps||0);
-    const tar = Number(g.targetReps||0);
-    if(!tar) return 0;
-    return Math.max(0, Math.min(100, Math.floor((cur / tar) * 100)));
-  }
-  if(g.mode === "weight"){
-    const cur = Number(g.currentWeight||0);
-    const tar = Number(g.targetWeight||0);
-    if(!tar) return 0;
-    return Math.max(0, Math.min(100, Math.floor((cur / tar) * 100)));
-  }
-  // weight_reps: 둘 다 만족해야 100
-  const wPct = g.targetWeight ? (Number(g.currentWeight||0) / Number(g.targetWeight)) : 0;
-  const rPct = g.targetReps ? (Number(g.currentReps||0) / Number(g.targetReps)) : 0;
-  const pct = Math.min(wPct, rPct) * 100;
-  return Math.max(0, Math.min(100, Math.floor(pct)));
-}
-
-function goalDisplayLine(g){
-  if(g.mode === "reps"){
-    return `${g.currentReps||0} / ${g.targetReps} 회`;
-  }
-  if(g.mode === "weight"){
-    return `${g.currentWeight||0} / ${g.targetWeight} kg`;
-  }
-  return `${g.currentWeight||0}kg × ${g.currentReps||0} / ${g.targetWeight}kg × ${g.targetReps}`;
-}
-
-function renderGoals(){
-  const listEl = document.getElementById("goalsList");
-  if(!listEl) return;
-
-  if(!goals.length){
-    listEl.innerHTML = `<div style="color:#777;font-size:13px;">목표를 추가해봐</div>`;
-    return;
-  }
-
-  listEl.innerHTML = goals.map(g=>{
-    const pct = calcGoalProgress(g);
-    return `
-      <div style="padding:12px 12px;border:1px solid #222;border-radius:14px;background:#111;margin-bottom:10px;">
-        <div style="display:flex;justify-content:space-between;align-items:center;">
-          <div style="font-size:16px;font-weight:700;color:#fff;">${g.name}</div>
-          <button data-id="${g.id}" class="goal-del" style="background:none;border:none;color:#777;font-size:14px;cursor:pointer;">삭제</button>
-        </div>
-
-        <div style="margin-top:6px;font-size:13px;color:#aaa;">${goalDisplayLine(g)}</div>
-
-        <div style="margin-top:10px;height:6px;background:rgba(255,255,255,0.12);border-radius:999px;overflow:hidden;">
-          <div style="height:100%;width:${pct}%;background:#FFD700;border-radius:999px;"></div>
-        </div>
-      </div>
-    `;
-  }).join("");
-
-  // 삭제 연결
-  document.querySelectorAll(".goal-del").forEach(btn=>{
-    btn.addEventListener("click", ()=>{
-      const id = btn.dataset.id;
-      goals = goals.filter(x => x.id !== id);
-      saveGoalsToLocal();
-      renderGoals();
-    });
-  });
-}
-
-const addGoalBtn = document.getElementById("addGoalBtn");
-const goalModal = document.getElementById("goalModal");
-const goalCancel = document.getElementById("goalCancel");
-const goalSave = document.getElementById("goalSave");
-
-addGoalBtn.addEventListener("click", ()=>{
-  goalModal.classList.remove("hidden");
-});
-
-goalCancel.addEventListener("click", ()=>{
-  goalModal.classList.add("hidden");
-});
-
-goalModal.addEventListener("click", (e)=>{
-  if(e.target === goalModal) goalModal.classList.add("hidden");
-});
-
-goalSave.addEventListener("click", ()=>{
-  const name = (document.getElementById("goalName").value || "").trim();
-  const w = Number(document.getElementById("goalWeight").value);
-  const r = Number(document.getElementById("goalReps").value);
-
-  if(!name){ alert("목표명을 입력해"); return; }
-  if(!w && !r){ alert("무게/횟수 중 하나는 입력해야 해"); return; }
-
-  let mode = "reps";
-  if(w && r) mode = "weight_reps";
-  else if(w) mode = "weight";
-  else mode = "reps";
-
-  const g = {
-    id: "g_" + Date.now(),
-    name,
-    mode,
-    targetWeight: w || null,
-    targetReps: r || null,
-    currentWeight: null,
-    currentReps: null
-  };
-
-  // 초기 current는 0으로
-  if(mode === "weight") g.currentWeight = 0;
-  if(mode === "reps") g.currentReps = 0;
-  if(mode === "weight_reps"){ g.currentWeight = 0; g.currentReps = 0; }
-
-  goals.unshift(g);
-  saveGoalsToLocal();
-  renderGoals();
-
-  // 입력값 초기화 + 닫기
-  document.getElementById("goalName").value = "";
-  document.getElementById("goalWeight").value = "";
-  document.getElementById("goalReps").value = "";
-  goalModal.classList.add("hidden");
-});
-
-
+   
 
 
    
