--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#000000">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="MuscleFlow">
 <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
