기록바탕검정인거

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ td, th {
 .folderContent {
     display:none;
     margin-top:10px;
-    background:#444;
+    background:#000;    /*원래 444였음 */
     border-radius:8px;
     padding:10px;
     height:300px;
