--- a/index.html
+++ b/index.html
@@ -183,36 +183,57 @@ td, th {
    3대 종목 버튼 (미니멀 C안)
 ================================ */
 
+/* ===============================
+   ✅ 기록 탭(벤치/스쿼트/데드/OHP) - iOS 메모장 느낌
+================================ */
 .recordFolders{
   display: flex;
-  gap: 24px;                 /* 버튼 사이 여백 */
-  margin-top: 20px;
-  padding-bottom: 6px;
-  border-bottom: 1px solid rgba(255,255,255,0.08);
+  gap: 18px;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-top: 14px;
+  padding: 6px 4px 10px;
+
+  border-bottom: 1px solid rgba(255,255,255,0.10);
 }
 
+/* 버튼 기본 */
 .folderBtn{
-  flex: none;
-  background: none;
+  flex: 1;
+  background: transparent;
   border: none;
-  padding: 0;
-  font-size: 15px;
-  font-weight: 500;
-  color: #888;               /* 기본 비활성 회색 */
-  position: relative;
+
+  padding: 8px 0 12px;
+  margin: 0;
+
+  color: rgba(255,255,255,0.55);
+  font-size: 16px;
+  font-weight: 650;
+  letter-spacing: 0.2px;
+
   cursor: pointer;
-  transition: all 0.2s ease;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
 }
 
-/* hover */
-.folderBtn:hover{
-  color: #ccc;
-}
-
-/* 활성 상태 */
+/* ✅ 활성: 글자 흰색 */
 .folderBtn.active{
-  color: #fff;               /* ✅ 활성 글자 흰색 */
-  font-weight: 700;
+  color: #fff;
+}
+
+/* ✅ 활성 밑줄 (흰색) */
+.folderBtn.active::after{
+  content: "";
+  position: absolute;
+  left: 10%;
+  right: 10%;
+  bottom: -10px;
+
+  height: 2px;
+  background: #fff;
+  border-radius: 999px;
+  opacity: 0.95;
 }
 
 /* 활성 밑줄 */
