--- a/index.html
+++ b/index.html
@@ -159,14 +159,7 @@ td, th {
 /* ===============================
    3대 기록
 ================================ */
-#total3 {
-      text-align: center;        /* 가운데 */
-    font-size: 28px;           /* 큼직 */
-    font-weight: 800;          /* 굵게 */
-    letter-spacing: 0.5px;     /* 살짝 고급 */
-    margin: 4px 0 10px;
-    color: #FFD700;
-}
+
 
 .rmInput {
     height:40px;
@@ -223,25 +216,12 @@ td, th {
 }
 
 /* ✅ 활성 밑줄 (흰색) */
-.folderBtn.active::after{
-  content: "";
-  position: absolute;
-  left: 10%;
-  right: 10%;
-  bottom: -10px;
-
-  height: 2px;
-  background: #fff;
-  border-radius: 999px;
-  opacity: 0.95;
-}
-
 /* 활성 밑줄 */
 .folderBtn.active::after{
   content: "";
   position: absolute;
   left: 0;
-  bottom: -8px;
+  bottom: -4px;
   width: 100%;
   height: 2px;
   background: #fff;          /* ✅ 밑줄도 흰색 */
@@ -1183,18 +1163,22 @@ input[type="number"] {
 ================================ */
 .three-header {
   position: relative;
-  margin: 20px 0 10px;
+  margin: 6px 0 6px;
   text-align: center;
 }
 
 /* 3대 텍스트 */
-#total3 {
-      text-align: center;        /* 가운데 */
-    font-size: 28px;           /* 큼직 */
-    font-weight: 800;          /* 굵게 */
-    letter-spacing: 0.5px;     /* 살짝 고급 */
-    margin: 4px 0 10px;
-    color: #FFD700;
+#total3{
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+  letter-spacing: 0.5px;
+  line-height: 1.1;
+
+  margin: 0;             /* ✅ 내부 여백 제거 */
+  transform: translateY(-6px);  /* ✅ 확실히 위로 당김 (원하면 -10px도 가능) */
+
+  color: #FFD700;
 }
 
 /* 오른쪽 버튼 */
