--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@ body {
   height: 100vh;
   margin: 0 auto;
   background: black;
-  padding: 0 20px calc(var(--bottomTabH) + env(safe-area-inset-bottom));
+
+  /* ✅ topBar 높이만큼 위 공간 확보 */
+  padding: 70px 20px calc(var(--bottomTabH) + env(safe-area-inset-bottom));
   box-sizing: border-box;
+
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
@@ -98,13 +101,27 @@ td, th {
    로그인 영역
 ================================ */
   
-.topBar {
+.topBar{
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 390px;
+  max-width: 100%;
+
+  height: 55px;
+  padding: 12px 10px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 55px; 
-  padding: 12px 10px;   /* 14 → 10 (오른쪽 더 붙음) */
-    border-bottom: 1px solid rgba(255,255,255,0.04);
+
+  background: rgba(0,0,0,0.95);
+  backdrop-filter: blur(10px);
+
+  border-bottom: 1px solid rgba(255,255,255,0.04);
+  z-index: 99999;
 }
 
 
@@ -1223,9 +1240,10 @@ input[type="number"] {
 </head>
 
 <body>
-<div class="app">
    
-<div class="topBar">
+   
+   
+   <div class="topBar">
   <div class="topText">
     <div>대부분의 문제는 돈이 없어서,</div>
     <div>그 외의 문제는 근육이 없어서 생긴다</div>
@@ -1272,14 +1290,10 @@ input[type="number"] {
 </button>
 
 </div>
-
-
-
+   
+<div class="app">
    
 <div class="container">
-
-
-
 
 <!-- 1RM -->
 <div id="tab1" class="tabContent active">
