--- a/index.html
+++ b/index.html
@@ -104,16 +104,11 @@ td, th {
 .topBar{
   position: fixed;
   top: 0;
-
-  /* ✅ 여기 핵심: 50%/transform 방식 버리고, 좌우 0 + margin auto */
   left: 0;
   right: 0;
   margin: 0 auto;
-  transform: none;
-
   width: 390px;
   max-width: 100%;
-
   height: var(--topBarH);
 
   padding: calc(env(safe-area-inset-top) + 8px) 16px 8px;
@@ -123,11 +118,24 @@ td, th {
   justify-content: space-between;
   align-items: center;
 
-  background: rgba(0,0,0,0.95);
-  backdrop-filter: blur(10px);
+  /* ✅ 배경/블러는 ::before로 보냄 */
+  background: transparent;
 
   border-bottom: 1px solid rgba(255,255,255,0.04);
   z-index: 99998;
+
+  position: fixed;
+  isolation: isolate;     /* ✅ iOS 합성 충돌 줄임 */
+}
+
+.topBar::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background: rgba(0,0,0,0.95);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  z-index:-1;             /* ✅ 탑바 “뒤”에만 깔림 */
 }
 
 
