--- a/index.html
+++ b/index.html
@@ -846,18 +846,15 @@ cursor: pointer;
 
 .settings-overlay{
   position: fixed;
-  left: 0; top: 0;
-  width: 100vw;
-  height: 100dvh;                 /* ✅ iOS 주소창/툴바 대응 */
+  inset: 0;                 /* ✅ top/left/right/bottom 한방 */
+  width: auto;
+  height: auto;
 
   background: rgba(0,0,0,0.4);
-  z-index: 2147483647;            /* ✅ 사실상 최상위 */
+  z-index: 2147483647;
 
-  transform: translateZ(0);       /* ✅ iOS 합성 레이어 강제 */
-  -webkit-transform: translateZ(0);
-
-  display: flex;
-  justify-content: flex-end;
+  display:flex;
+  justify-content:flex-end;
 }
 
 .settings-overlay.hidden {
