--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@ body {
   height: 100vh;
   margin: 0 auto;
   background: black;
-  padding: 0 20px calc(var(--bottomTabH) + env(safe-area-inset-bottom));
+  padding:
+    calc(var(--topBarH) + env(safe-area-inset-top))
+    20px
+    calc(var(--bottomTabH) + env(safe-area-inset-bottom));
   box-sizing: border-box;
   overflow-y: auto;
   overflow-x: hidden;
@@ -98,14 +101,25 @@ td, th {
    로그인 영역
 ================================ */
   
-.topBar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 55px; 
-  padding: 12px 10px;   /* 14 → 10 (오른쪽 더 붙음) */
-    border-bottom: 1px solid rgba(255,255,255,0.04);
+.topBar{
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 390px;
+  max-width: 100%;
+
+  height: var(--topBarH);
+  padding: 12px 10px;
+
+  background: rgba(0,0,0,0.92);
+  backdrop-filter: blur(10px);
+  border-bottom: 1px solid rgba(255,255,255,0.04);
+
+  z-index: 99999;
 }
+
 
 
    .topText {
@@ -734,7 +748,11 @@ cursor: pointer;
 ================================ */
 
 /* 탭바 높이 */
-:root { --bottomTabH: 88px; }
+:root{
+  --topBarH: 55px;
+  --bottomTabH: 88px;
+}
+
 
 
 
