--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,45 @@ cursor: pointer;
   color: #666;
 }
 
+/* ✅ 탑바 경계선 바로 밑: 역삼각 토글 */
+.top-divider-toggle{
+  position: fixed; /* 탑바처럼 고정 */
+  left: 50%;
+  transform: translateX(-50%);
+  top: calc(var(--topBarH, 55px) + env(safe-area-inset-top)); /* 탑바 끝 지점 */
+  
+  /* 390px 프레임 안에서 왼쪽 1/10 지점 */
+  width: 390px;
+  max-width: 100%;
+  pointer-events: none; /* 컨테이너처럼 두고 */
+
+  z-index: 99998;
+}
+
+/* 실제 클릭되는 삼각형 */
+.top-divider-toggle{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10%;   /* ✅ 왼쪽 기준 1/10 지점 */
+  height: 0;           /* 선에 붙게 */
+  border: none;
+  background: transparent;
+  color: #777;         /* ✅ 회색 */
+  font-size: 16px;
+  line-height: 1;
+  pointer-events: auto; /* 버튼만 클릭 */
+  cursor: pointer;
+}
+
+/* 선에 딱 붙는 느낌 */
+.top-divider-toggle{
+  margin-top: -2px; /* 필요하면 -4px까지 */
+}
+
+/* 눌림 효과 */
+.top-divider-toggle:active{
+  transform: translateX(-50%) scale(0.95);
+}
 
 
    
@@ -1252,7 +1291,7 @@ input[type="number"] {
   display: block;
   margin: auto;
 }
-
+.three-toggle{ display:none; }
 /* 접힌 상태 */
 #threeDetail {
   display: none;
@@ -1342,7 +1381,10 @@ input[type="number"] {
    
      <!-- 🔥 헤더 -->
 <div class="three-header">
-  <button id="threeToggleBtn" class="three-toggle"></button>
+  <button id="threeToggleBtn" class="top-divider-toggle" aria-label="3대 접기/펼치기">
+  ▼
+</button>
+
 </div>
 
 <div id="threeDetail">
